--- a/.env.example
+++ b/.env.example
@@ -1,36 +1,7 @@
-# Environment Configuration
-NODE_ENV=production
+# Supabase Configuration
+VITE_SUPABASE_URL=your_supabase_project_url_here
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
-# API Configuration
-VITE_API_URL=https://your-api-domain.com
-
-# Feature Flags
-VITE_DEV_MOCKS=false
-
-# Admin Seed Configuration (for development only)
-# SEED_ADMIN_EMAIL=admin@casinoroyal.com
-# SEED_ADMIN_PASSWORD=your_secure_password_here
-
-# Security Configuration
-# VITE_SESSION_SECRET=your_session_secret_here
-# VITE_JWT_SECRET=your_jwt_secret_here
-
-# Database Configuration (if using a backend)
-# DATABASE_URL=your_database_connection_string
-
-# Payment Gateway Configuration
-# STRIPE_PUBLIC_KEY=pk_live_your_stripe_public_key
-# STRIPE_SECRET_KEY=sk_live_your_stripe_secret_key
-
-# Email Service Configuration
-# SMTP_HOST=smtp.gmail.com
-# SMTP_PORT=587
-# SMTP_USER=your_email@gmail.com
-# SMTP_PASS=your_app_password
-
-# Analytics Configuration
-# GOOGLE_ANALYTICS_ID=GA_MEASUREMENT_ID
-# SENTRY_DSN=your_sentry_dsn_here
-
-# CDN Configuration
-# CDN_URL=https://your-cdn-domain.com
+# Example:
+# VITE_SUPABASE_URL=https://your-project.supabase.co
+# VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
