--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "build:prod": "vite build --mode production",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "lint:fix": "eslint . --fix",
+    "preview": "vite preview",
+    "start": "node server.js",
+    "security:audit": "npm audit",
+    "security:fix": "npm audit fix",
+    "deploy:netlify": "npm run build && netlify deploy --prod --dir=dist",
+    "deploy:preview": "npm run build && netlify deploy --dir=dist"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
