Security fix: Remove hardcoded credentials and update .gitignore

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,10 +10,5 @@
   to = "/index.html"
   status = 200
 
-[context.production.environment]
-  VITE_SUPABASE_URL = "YOUR_SUPABASE_URL"
-  VITE_SUPABASE_ANON_KEY = "YOUR_SUPABASE_ANON_KEY"
-
-[context.deploy-preview.environment]
-  VITE_SUPABASE_URL = "YOUR_SUPABASE_URL"
-  VITE_SUPABASE_ANON_KEY = "YOUR_SUPABASE_ANON_KEY"
+# Environment variables are set in Netlify dashboard
+# Site settings → Environment variables
